--- a/src/css/app.css
+++ b/src/css/app.css
@@ -5,7 +5,7 @@
   --btn-color: #0ea66b;
   --font-color: #ebebeb;
   --font-color2: #bbbbbb;
-  --none: #ff3737;
+  --none: #777;
   --wait: #0087ff;
   --warning: #ffe600;
   --process: #b371ff;
