--- a/src/css/app.css
+++ b/src/css/app.css
@@ -1,16 +1,16 @@
 :root {
-  --main-color: #151515;
-  --sub-color: #1e1e1e;
-  --sub-color2: #222;
-  --btn-color: #0ea66b;
-  --font-color: #ebebeb;
-  --font-color2: #bbbbbb;
+  --main-color: #0d1117;
+  --sub-color: #151920;
+  --sub-color2: #1c2129;
+  --btn-color: #1c2129;
+  --font-color: #c5c5c5;
+  --font-color2: #c5c5c5;
   --none: #777;
   --wait: #0087ff;
   --warning: #ffe600;
   --process: #b371ff;
   --complete: #09ff00;
-  --border-radius: 4px;
+  --border-radius: 8px;
   --border-color: #353535;
   --gap: 20px;
 }
@@ -42,10 +42,6 @@
   background: var(--none);
 }
 
-* {
-  box-sizing: border-box;
-}
-
 ::-webkit-scrollbar {
   background: transparent;
   width: 10px;
@@ -62,10 +58,13 @@
   display: flex;
   flex-direction: column;
   height: inherit;
-  background: #ededed;
   height: 100vh;
-  font-family: monospace;
   color: var(--font-color);
+}
+
+* {
+  box-sizing: border-box;
+  font-family: "inter";
 }
 
 body {
@@ -83,13 +82,10 @@ header {
   z-index: 1;
   display: flex;
   align-items: center;
-  background: var(--main-color);
-  border-bottom: 1px solid var(--border-color);
-  height: 50px;
 }
 
 footer {
-  display: none;
+  display: grid;
   align-items: center;
   background: var(--main-color);
   height: 50px;
@@ -98,24 +94,39 @@ footer {
 }
 
 main {
-  display: grid;
-  grid-template-columns: 13vw auto;
-  height: 100%;
+  display: flex;
 }
 
 aside {
-  display: flex;
-  flex-direction: column;
   border-right: 1px solid var(--border-color);
-  height: calc(100vh - 50px);
+  height: calc(100vh - 100px);
+  width: clamp(240px, 30%, 300px);
   user-select: none;
+  background: var(--sub-color);
 }
 
 section {
   background: var(--main-color);
   padding: var(--gap);
-  height: calc(100vh - 50px);
+  height: calc(100vh - 100px);
+  width: 100%;
   overflow-y: scroll;
+}
+
+h1 {
+  font-size: clamp(32px, 6vw, 80px);
+}
+h2 {
+  font-size: clamp(28px, 5vw, 64px);
+}
+h3 {
+  font-size: clamp(24px, 4vw, 48px);
+}
+h4 {
+  font-size: clamp(20px, 3vw, 36px);
+}
+h5 {
+  font-size: clamp(18px, 2.5vw, 28px);
 }
 
 a {
@@ -128,7 +139,7 @@ a {
 
 img {
   width: 100%;
-  height: 100%;
+  height: auto;
   object-fit: contain;
 }
 
@@ -242,7 +253,7 @@ button {
   cursor: pointer;
 }
 
-.Tablefilter {
+.filter_box {
   display: flex;
   flex-wrap: wrap;
   align-items: center;
@@ -250,7 +261,7 @@ button {
   overflow-x: scroll;
 }
 
-.Tablefilter button.active {
+.filter_box button.active {
   opacity: 0.5;
 }
 
@@ -268,6 +279,12 @@ button {
   width: 80%;
   height: 7px;
   margin: 10px 0 var(--gap);
+}
+
+.grid_431 {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(clamp(180px, 30%, 300px), 1fr));
+  gap: var(--gap);
 }
 
 @media (min-width: 1201px) {
