--- a/src/assets/style/app.css
+++ b/src/assets/style/app.css
@@ -1,38 +1,22 @@
-:root {
-  --main-color1: #0d1117;
-  --main-color2: #151920;
-  --main-color3: #1c2129;
-  --btn-color: #1c2129;
-  --font-color: #c5c5c5;
-  --font-color2: #c5c5c5;
-  --border-radius: 8px;
-  --border-color: #353535;
-  --gap: 15px;
-}
-
-::-webkit-scrollbar {
-  background: transparent;
-  width: 10px;
-}
-
-::-webkit-scrollbar-thumb {
-  background: var(--font-color);
-  border-radius: var(--border-radius);
-  min-height: 5%;
-}
-
 * {
   box-sizing: border-box;
   font-family: "inter";
 }
 
 body {
+  --color1: #0d1117;
+  --color2: #151920;
+  --color3: #1c2129;
+  --btn-color: #1c2129;
+  --font-color: #c5c5c5;
+  --font-color2: #c5c5c5;
+  --border-radius: 8px;
+  --border-color: #222935;
+  --gap: 15px;
   margin: 0;
   padding: 0;
-  font-size: 14px;
+
   min-height: 100vh;
-  background: var(--main-color1);
-  color: var(--font-color);
 }
 
 h1 {
@@ -52,7 +36,9 @@ h5 {
 }
 
 #AppClient {
-  background: var(--main-color1);
+  background: var(--color1);
+  color: var(--font-color);
+  font-size: 14px;
 }
 
 a {
@@ -63,21 +49,52 @@ a {
   letter-spacing: 1px;
 }
 
+header {
+  background: var(--color2);
+}
+
+aside {
+  position: relative;
+  left: 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 100%;
+  width: 100%;
+  min-width: 280px;
+  max-width: 280px;
+  border-right: 1px solid var(--border-color);
+  background: var(--color2);
+}
+
 .title {
-  font-size: clamp(18px, 2vw, 24px);
+  font-size: clamp(16px, 1vw, 18px);
+}
+
+.body-content {
+  display: flex;
+  flex-direction: column;
+  gap: var(--gap);
+  padding-bottom: calc(var(--gap) * 2);
 }
 
 .flex {
   display: flex;
   align-items: center;
   flex-wrap: wrap;
-  gap: var(--gap);
+  gap: 5px;
 }
 
-.container {
+.page-control {
   display: flex;
-  flex-direction: column;
-  gap: var(--gap);
+  align-items: center;
+  flex-wrap: wrap;
+  gap: 5px;
+}
+
+.pager-btn[disabled] {
+  opacity: 0.5;
+  cursor: not-allowed;
 }
 
 img {
@@ -92,6 +109,35 @@ table {
   width: 100%;
   color: var(--font-color);
   font-size: 12px;
+}
+
+thead,
+tbody {
+  display: block;
+}
+
+thead tr,
+tbody tr {
+  display: table;
+  width: 100%;
+  table-layout: fixed;
+}
+
+tbody {
+  height: 70vh;
+  overflow-y: scroll;
+  width: calc(100% + 11px);
+  padding-right: 5px;
+}
+
+::-webkit-scrollbar {
+  background: transparent;
+  width: 7px;
+}
+
+::-webkit-scrollbar-thumb {
+  background: var(--font-color);
+  border-radius: var(--border-radius);
 }
 
 tbody > tr > td:first-child {
@@ -126,6 +172,7 @@ textarea {
   margin: 0;
   color: var(--font-color);
   border: 1px solid var(--border-color);
+  min-height: 35px;
 }
 
 input:-webkit-autofill,
@@ -144,10 +191,8 @@ textarea {
   background: transparent;
 }
 
-input,
-button {
+input {
   height: fit-content;
-  min-height: 35px;
   border-radius: var(--border-radius);
 }
 
@@ -155,7 +200,7 @@ button {
   display: grid;
   place-items: center;
   height: fit-content;
-  width: fit-content;
+  width: auto;
   background: var(--btn-color);
   color: #ededed;
   margin: 0;
@@ -164,7 +209,11 @@ button {
   transition: 0.3s;
   cursor: pointer;
   font-size: 12px;
-  padding: 5px 15px;
+  padding: 10px 15px;
+}
+
+button:hover {
+  background: var(--color2);
 }
 
 .grid-431 {
@@ -173,24 +222,20 @@ button {
   gap: var(--gap);
 }
 
-.table-views {
-  height: 80vh;
-  overflow-x: scroll;
-}
-
-.page-control {
-  display: flex;
-  align-items: center;
-  gap: var(--gap);
-}
-
 .dropdown {
   color: var(--font-color);
-  background: var(--main-color3);
+  background: var(--color3);
   padding: 5px 15px;
   border: none;
   min-height: 35px;
 }
 
 @media (min-width: 1201px) {
+}
+
+@media screen and (max-width: 992px) {
+  tbody {
+    width: 100%;
+    padding-right: 0;
+  }
 }
