--- a/src/assets/style/table.css
+++ b/src/assets/style/table.css
@@ -1,10 +1,25 @@
 /* Table Styles */
-.table-views {
+
+.table-view-container {
+  display: flex;
+  gap: var(--gap2);
+  height: 100%;
   overflow: hidden;
+}
+
+.table-views {
+  display: flex;
+  flex-direction: column;
+  gap: var(--gap2);
+  background: var(--color2);
+  border: 1px solid var(--border-color);
   border-radius: var(--border-radius);
+  overflow: auto;
+  flex: 1;
 }
 
 table {
+  flex: 1;
   width: 100%;
   border-collapse: collapse;
   color: var(--font-color);
@@ -33,8 +48,6 @@ thead th {
 }
 
 tbody {
-  max-height: 70vh;
-  overflow-y: scroll;
   width: 100%;
 }
 
@@ -56,9 +69,14 @@ tbody tr:hover {
   background: rgba(255, 255, 255, 0.02);
 }
 
+.table-section {
+  overflow: auto;
+}
+
 /* Status Cell Styles */
 .hasStatus {
   font-weight: 500;
+  text-align: center;
 }
 
 .hasStatus.Installed {
@@ -81,9 +99,17 @@ tbody tr:hover {
   background: rgba(37, 99, 235, 0.1);
 }
 
-@media (max-width: 992px) {
-  th,
-  td {
-    padding: 8px var(--gap);
-  }
+.hasStatus.Service {
+  color: var(--primary);
+  background: rgba(37, 99, 235, 0.1);
+}
+
+.hasStatus.No {
+  color: var(--danger);
+  background: rgba(220, 38, 38, 0.1);
+}
+
+.hasStatus.Complete {
+  color: var(--success);
+  background: rgba(22, 163, 74, 0.1);
 }
