--- a/src/assets/style/variables.css
+++ b/src/assets/style/variables.css
@@ -27,10 +27,10 @@
   /* Spacing */
   --gap: 10px;
   --gap2: 20px;
-  --pad: 6vw;
 
   /* Border */
-  --border-radius: 8px;
+  --border-radius: 6px;
+  --box-shadow: 1px 1px 2px transparent;
 
   /* Sizes */
   --icon-size: 25px;
